--- a/Android 9/app/src/main/res/layout/activity_main.xml
+++ b/Android 9/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,14 @@
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:visibility="invisible"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_coin" />
+
+    <include layout="@layout/item_coin"/>
 
 </android.support.constraint.ConstraintLayout>
