--- a/Android 15/app/src/main/res/layout/activity_main.xml
+++ b/Android 15/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:required="true" />
 
     <com.drondon.android15.ProgressButton
         android:id="@+id/button"
