--- a/Android 15/app/src/main/res/drawable/app_button_enabled.xml
+++ b/Android 15/app/src/main/res/drawable/app_button_enabled.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorAccent" />
+    <stroke android:color="@color/colorPrimaryDark" android:width="4dp"/>
     <corners android:radius="3dp" />
 </shape>
